# test

./: CMakeLists.txt  CMakeSettings.json
UnitTest1/: CMakeLists.txt  UnitTest1.vcxproj  test.cpp
lib/: CMakeLists.txt  bit_number.h  list.cpp  list.h  prime_number.h  test.vcxproj  test.vcxproj.filters  tree.cpp  tree.h  words.cpp  words.h
